# mnemonic-pictures

./: 404.html  Cargo.toml  LICENSE_MIT  README.md  index.html
assets/: index-1f77a42e.css  index-91b267ff.js  index-9e091c11.css  index-af25e2bf.js  index-d7d03ffd.js  mnemonic_pictures_bg-7aaf4d15.wasm  mnemonic_pictures_bg-b15e755f.wasm
example/: deploy.sh  index.html  package.json  vite.config.js  vite.config.ts
example/src/: App.vue  main.ts  style.css
src/: lib.rs  picture_gen.rs
