[package]
name = "mnemonic-pictures"
version = "0.1.1"
authors = ["GregoryKogan <grisha.koganovskiy@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/GregoryKogan/mnemonic-pictures#readme"
repository = "https://github.com/GregoryKogan/mnemonic-pictures.git"
keywords = ["mnemonic", "picture", "image", "generation", "random", "perlin-noise", "rust", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
