[package]
name = "mnemonic-pictures"
version = "0.1.1"
authors = ["GregoryKogan <grisha.koganovskiy@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/GregoryKogan/mnemonic-pictures#readme"
repository = "https://github.com/GregoryKogan/mnemonic-pictures.git"
keywords = ["mnemonic", "picture", "image", "generation", "random", "perlin-noise", "rust", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
rand = "0.8.5"
simple-simplex = "1.0.3"
wasm-bindgen = "0.2.84"
image = "0.24.5"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
