[package]
name = "mnemonic-pictures"
version = "1.1.0"
authors = ["GregoryKogan <grisha.koganovskiy@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/GregoryKogan/mnemonic-pictures#readme"
repository = "https://github.com/GregoryKogan/mnemonic-pictures.git"
keywords = ["mnemonic", "picture", "image", "generation", "random", "perlin-noise", "rust", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
bracket-noise = "0.8.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
colorgrad = "0.6.2"
siphasher = "0.3.10"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
